Made some style changes to make the site more responsive on smaller devices. Also made changes to NavBar.jsx so the info bar is no longer included as it doesn't need to be displayed all the time. This feature is now included in Articles.jsx.

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   font-family: 'Red Hat Display', sans-serif;;
   text-align: center;
   max-width: 1080px;
+  align-self: center;
+  align-content: center;
 }
 
 .heading {
@@ -28,7 +30,6 @@
   margin: 2px
 }
 
-
 .NavBarSelectors {
   margin: auto;
   max-width: 80%;
@@ -46,21 +47,21 @@
 .DisplayBar {
   display: flex;
   margin: auto;
-  max-width: 70%;
+  width: 70%;
   height: 30px;
   text-align: center;
   background-color: rgb(121, 194, 194);
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .DisplayBarInfo {
   margin: auto;
   align-self: auto;
-  width: 60%;
+  width: 90%;
   height: 20px;
   text-align: center;
   background-color: rgb(211, 218, 219);
-  border-radius: 10px;
+  border-radius: 6px;
 }
 
 
@@ -169,6 +170,12 @@ label {
   padding: 10px;
 }
 
+@media only screen and (max-width: 800px) {
+  .NavBarSelectors {
+    height: 46px;
+  }
+}
+
 @media only screen and (max-width: 650px) {
 
   .heading {
@@ -190,16 +197,11 @@ label {
   }
   
   .NavBarSelectors {
-    height: 46px;
-  }
-
-  .DisplayBar {
-    height: 46px;
+    height: 70px;
   }
 
   .DisplayBarInfo {
     font-size: smaller;
-    height: 38px;
   }
 
   .sort-by_label {
